--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ id: home
 				<div>
 				<img src="images/icons/program.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable">The Program</span></h2>
-				<p class="editable">PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique experience appropriate to all levels of experience.<strong><br>Stay tuned for the full program in June.</strong></p>
+				<p class="editable">PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique experience appropriate for all levels of experience.<strong><br>Stay tuned for the full program in June.</strong></p>
 				<a href="/program/" class="button editable outline">More info</a>
 				</div>
 			</span>
