--- a/program.html
+++ b/program.html
@@ -11,7 +11,7 @@ description: PowerUp
 				<img src="../images/icons/program-white.svg" class="x-icon" align="top">
 				<h2> <span class="dotted-underline"> Programs </span></h2>
 				<p>
-				PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It’s a unique experience appropriate to all levels of experience.
+				PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It’s a unique experience appropriate for all levels of experience.
 					<br><br>
 					<b>Stay tuned for the full program in June. 	</b>
 				</p>
