--- a/faqs.html
+++ b/faqs.html
@@ -2,7 +2,6 @@
 title: 'FAQs'
 description: FAQ
 ---
-<div class="white-bg"></div>
 <div class="gradientgradient blue-gradient"></div>
 
 
@@ -25,7 +24,7 @@ description: FAQ
                 <p>
                     For too long, self-serving corporations and right-wing power brokers have captured our democracy, making inequality worse and ravaging our environment. We need to build a new form of power that breaks this hold.
 
-Securing a safe world for future generations is going to come down us — and we’re going to have to step up now. At PowerUp, you will converge with a thousand passionate GetUp members for a weekend of shared values, practical skills workshops and strategy sessions. Then together we’ll launch a new national network of Action Groups that can take back power for everyday people. 
+Securing a safe world for future generations is going to come down to us — and we’re going to have to step up now. At PowerUp, you will converge with a thousand passionate GetUp members for a weekend of shared values, practical skills workshops and strategy sessions. Then together we’ll launch a new national network of Action Groups that can take back power for everyday people. 
 
 If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. <a class="blue" href="/ticket/">Buy your ticket now.</a>
                 </p>
@@ -125,7 +124,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                  If you can’t find the answer you’re looking for on this page, <a href="mailto:powerup@getup.org.au" class="blue">mail powerup@getup.org.au more information.</a>
+                  If you can’t find the answer you’re looking for on this page, email <a href="mailto:powerup@getup.org.au" class="blue">powerup@getup.org.au</a> for more information.
                 </p>
             </div>
 
@@ -140,7 +139,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    Your ticket covers you for the entire two-day conference, plus tea and coffee in the morning and afternoon breaks, and light snacks. Your ticket also serves as a ticket to the PowerUp after-party on Saturday evening.
+                    Your ticket covers you for the entire two-day conference, plus tea and coffee in the morning and afternoon breaks, and light snacks. Your ticket also serves as a ticket to the PowerUp social event on the Saturday evening.
                 </p>
             </div>
 
