--- a/faqs.html
+++ b/faqs.html
@@ -7,7 +7,7 @@ description: FAQ
 
 
 <div class="row">
-    <div class="small-12 columns">
+    <div class="small-12 columnsƒ">
         
         <h2 class="faq-heading"><span class="dotted-underline editable"> Questions? </span></h2>
         
@@ -125,7 +125,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                  If you can’t find the answer you’re looking for on this page, <a href="mailto:powerup@getup.org.au" class="blue">mail powerup@getup.org.au more information.</a>
+                  If you can’t find the answer you’re looking for on this page, <a href="mailto:powerup@getup.org.au" class="blue">email powerup@getup.org.au for more information.</a>
                 </p>
             </div>
 
@@ -140,7 +140,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    Your ticket covers you for the entire two-day conference, plus tea and coffee in the morning and afternoon breaks, and light snacks. Your ticket also serves as a ticket to the PowerUp after-party on Saturday evening.
+                    Your ticket covers you for the entire two-day conference, morning and afternoon tea, and an invite to the Saturday evening PowerUp Social.
                 </p>
             </div>
 
@@ -152,7 +152,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    To keep the cost of tickets down, lunch is not included. Instead we’ve organised for the nearby UNSW foodcourt to remain open so you have a great choice of lunch on both days.
+                    PowerUp aims to keep ticket prices as low as possible by not including lunch in the ticket price. Instead a variety of food vendors will be open on-site. Accommodation and travel is also not included in the ticket price.
                 </p>
             </div>
 
@@ -245,7 +245,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                  Unfortunately it is not possible to purchase a ticket on the day. That’s because a lot of planning goes into posting you a registration pack before the event and organising you into a workshop group. owerUp is expected to be a sell-out event so if you’re keen, buy your ticket now!
+                  Unfortunately it is not possible to purchase a ticket on the day. That’s because a lot of planning goes into posting you a registration pack before the event and organising you into a workshop group. PowerUp is expected to be a sell-out event so if you’re keen, <a href="http://www.powerup.org.au/ticket" class="blue">buy your ticket now!</a>
 
                 </p>
             </div>
@@ -259,7 +259,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <h3 class="faq-subheading"> Venue </h3>
             <!--QUESTION-->
             <a class="_accordion slab">
-                Where is PowerUp?
+                Where is PowerUp located?
             </a>
             <!--ANSWER-->
             <div class="panel">
@@ -276,7 +276,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    There are no train services to UNSW, but the venue is serviced by many bus routes. The easiest way to plan your trip is to use Transport NSW Trip Planner: <a href="https://transportnsw.info/trip#/" class="blue">transportnsw.info/trip/ </a>
+                    There are no train services to UNSW, but the venue is serviced by many bus routes. The easiest way to plan your trip is to use <a href="https://transportnsw.info/trip#/" class="blue">Transport NSW Trip Planner.</a>
                 </p>
             </div>
 
@@ -301,7 +301,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    PowerUp is a fully accessible event. If you would like to know more or would like to register your mobility with us, please get in <a href="mailto:powerup@getup.org.au" class="blue">touch with powerup@getup.org.au.</a> 
+                    PowerUp is a fully accessible event. For a comprehensive accessibility map of the UNSW Kensington campus click <a href="http://fmtoolbox.unsw.edu.au/comms/KensingtonParking.pdf" class="blue">here.</a> If you would like to know more or would like to register the status of your mobility with us, please get in touch with <a href="mailto:powerup@getup.org.au" class="blue">powerup@getup.org.au</a> 
                 </p>
             </div>
             <div class="faq-underline"></div>
@@ -309,7 +309,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
 
 <!---------------------------------------------------------------->
             <!--TRAVEL-->
-            <h3 class="faq-subheading"> Travel & Accomodation </h3>
+            <h3 class="faq-subheading"> Travel &amp; Accomodation </h3>
             <!--QUESTION-->
             <a class="_accordion slab">
                 I’m travelling interstate. When should I book my flight and accommodation?
@@ -330,10 +330,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only 5km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of options too. 
-                    <br>
-                    <br>
-                    To get a full sense of the options out there, you could you check hotel booking site <a href="https://www.booking.com.au" class="blue">www.booking.com.au</a> and <a href="https://www.airbnb.com.au/" class="blue"> www.airbnb.com.au. </a>
+                    If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only a 5 km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of options too. To get some more ideas, explore <a href="https://www.booking.com.au" class="blue">www.booking.com.au</a> and <a href="https://www.airbnb.com.au/" class="blue"> www.airbnb.com.au. </a>
                 </p>
             </div>
 
