--- a/speakers.html
+++ b/speakers.html
@@ -13,7 +13,7 @@ description: PowerUp
 				<div>
 				<img src="../images/icons/speakers-white.svg" class="x-icon" align="top">
 				<h2> <span class="dotted-underline"> Speakers </span></h2>
-				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. <br><br><em><strong>Stay tuned for updates in June.</strong></em></p>
+				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. <br><br><strong>Stay tuned for updates in June.</strong></p>
 					
 			
 				</div>
