homepage style fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ id: home
 		<div class="small-12 columns reset">
 		<img src="images/powerup-header.png" class="home-hero-image-powerup" />
 			<div class="texttext">
-				<h3 class="sub-heading slab editable">Join us at GetUp&rsquo;s first national conference<br />in Sydney on 23-24 September.</h3>
+				<h3 class="sub-heading slab editable">Join us at GetUp&rsquo;s first national conferencein Sydney on <span style="white-space: nowrap">23-24 September.</span></h3>
 		<a href="/ticket/" class="button home-hero-button editable">Secure your ticket</a>
 			</div>
 		</div>
@@ -92,12 +92,14 @@ id: home
 	<div class="circle"> </div>
 	<div class="x-home__image-container">
 		<div class="black reverse">
-			<span class="reverse-skew black-container reverse">				
+			<span class="reverse-skew black-container reverse">	
+        <div>			
 				<img src="images/icons/Speakers.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable" id="fade-position">Speakers </span></h2>
 				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win.<strong><br>
         Stay tuned for updates in June.</strong></p>
 				<a href="/speakers/" class="button editable outline">More info</a>
+        </div>
 			</span>
 		</div>
 		<img src="images/speakers-home.jpg" class="x-home-image" />
