--- a/ticket.html
+++ b/ticket.html
@@ -6,7 +6,7 @@ description: PowerUp
 <div class="dark-bg"></div>
 
 <div class="row">
-    <div class="medium-10 medium-offset-1 small-12 columns">
+    <div class="medium-10 medium-offset-1 small-12 columns" style="background: rgba(255,255,255,0.8)">
         <style type="text/css">iframe{width:100%}</style><p>
         <iframe src="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" style="height: 100vh; border:none;"></iframe>
         <script type="text/javascript" src="https://ticketbooth.azurewebsites.net/scripts/iframeResizer.min.js"></script>
