--- a/program.html
+++ b/program.html
@@ -18,6 +18,6 @@ description: PowerUp
 				</div>
 			</span>
 		</div>
-	<img src="../images/programs.jpg" class="speakers-hero-image">
+	<img src="../images/programs-new.jpg" class="speakers-hero-image">
 	</div>
 </div>
