fixed about page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@ description: We've built an amazing team of developers, marketers, designers and
 <div class="x-img-container about-top-container">
 	<div class="x-home__image-container about-text">
 		<div class="black blue-gradient about-width">
-			<span class="reverse-skew black-container">				
+			<span class="reverse-skew black-container">	
+				<div>
 				<img src="../images/getup-logo-white.png" class="about-logo">
 					<h4 class="normal"><b>GetUp is the main organiser of PowerUp.</b></h4>
 				<p>
@@ -14,6 +15,7 @@ description: We've built an amazing team of developers, marketers, designers and
 					<br><br>
 					Our work is driven by our values, not party politics. GetUp is, and always has been, an independent organisation. GetUp members come from every walk of life and around a shared belief in fairness, compassion and courage. We campaign on issues that our members care about in the fields of Environmental Justice, Human Rights, Economic Fairness and Democracy.
 				</p>
+					</div>			
 			</span>
 		</div>
 		<div class="about-image" style="background: url(../images/flowers.jpg);"></div>
@@ -26,7 +28,8 @@ description: We've built an amazing team of developers, marketers, designers and
 	<div class="circle about-circle"> </div>
 	<div class="x-home__image-container about-text">
 		<div class="black blue-gradient reverse about-width">
-			<span class="reverse-skew black-container reverse">				
+			<span class="reverse-skew black-container reverse">	
+				<div>			
 				<img src="../images/thecommons.png" class="about-logo">
 					<h4 class="normal"><b>The Commons is a proud sponsor of the skills workshops at PowerUp. </b></h4>
 				<p class="editable">
@@ -36,6 +39,7 @@ description: We've built an amazing team of developers, marketers, designers and
 					<br><br>
 					The Commons harnesses and shares the common factors that facilitate the creation of powerful social movements and winning campaigns. It connects campaigners and everyday activists – capturing and presenting their learnings in a useful and engaging way that ensures the data reaches the right people when they need it.
 				</p>
+				</div>
 			</span>
 		</div>
 		<div class="about-image" style="background: url(../images/commons.jpg);" id="commons-image"></div>
