--- a/faqs.html
+++ b/faqs.html
@@ -68,7 +68,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    You don’t need any skills or experience to attend PowerUp. Whether you’ve been involved in a community group or activism for years or just getting involved for the first time, PowerUp is a unique opportunity you won’t have had before.
+                    You don’t need any skills or experience to attend PowerUp. Whether you’ve been involved in a community group or activism for years, or you’re just getting involved for the first time, PowerUp is a unique opportunity you won’t have had before.
                 </p>
             </div>
 
@@ -261,12 +261,12 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <h3 class="faq-subheading"> Venue </h3>
             <!--QUESTION-->
             <a class="_accordion slab">
-                Where is PowerUp located?
+                Where is PowerUp?
             </a>
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    PowerUp is located in Sydney at the University of New South Wales: Sir John Clancy Auditorium, University of New South Wales, High Street, Kensington, NSW
+                    PowerUp is located in Sydney at the University of New South Wales: Sir John Clancy Auditorium, University of New South Wales, High Street, Kensington, NSW. The auditorium can be accessed through Gate 9 at the UNSW Kensington campus.
                 </p>
             </div>
 
@@ -332,7 +332,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only a 5 km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of options too. To get some more ideas, explore <a href="https://www.booking.com.au" class="blue">www.booking.com.au</a> and <a href="https://www.airbnb.com.au/" class="blue"> www.airbnb.com.au. </a>
+                    If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only a 5 km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of options too. To get some more ideas, explore <a href="htpps://www.booking.com.au" class="blue"> booking.com.au </a> and <a href="https://www.airbnb.com.au" class="blue">airbnb.com.au</a>.
                 </p>
             </div>
 
