--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ id: home
 		<div class="small-12 columns reset">
 		<img src="images/powerup-header.png" class="home-hero-image-powerup" />
 			<div class="texttext">
-				<h3 class="sub-heading slab editable">Join us at GetUp&rsquo;s first national conferencein Sydney on <span style="white-space: nowrap">23-24 September.</span></h3>
+				<h3 class="sub-heading slab editable">Join us at GetUp&rsquo;s first national conference in Sydney on <span style="white-space: nowrap">23-24 September.</span></h3>
 		<a href="/ticket/" class="button home-hero-button editable">Secure your ticket</a>
 			</div>
 		</div>
@@ -37,7 +37,7 @@ id: home
 		
 		<img src="images/icons/our-story.svg" class="center-icon" />
 		<h2><span class="dotted-underline editable">It's time to organise!</span></h2>
-		<p class="editable" id="first-fade-position2"><strong>PowerUp is no <em>ordinary</em> conference. </strong><br />You'll be skilled-up over two packed days, connect with people from all over the country, and usher in a new era of people-power in Australia.&nbsp;<br /><br />At PowerUp, you will be trained in critical organising skills and build relationships with people from your electorate. Together, we will make a plan to scale people-power nationally and launch a national network of local Action Groups. &nbsp;<br /><br />PowerUp is about organising the power to do <em>more</em> than educate voters at election time. <strong>We are building the power to shift polls, move the media, and change the battleground issues that&rsquo;ll decide the next election.</strong></p>
+		<p class="editable" id="first-fade-position2"><strong>PowerUp is no <em>ordinary</em> conference. </strong><br />You'll be skilled-up over two packed days, connect with people from all over the country, and usher in a new era of people-power in Australia.&nbsp;<br /><br />At PowerUp, you will be trained in critical organising skills and build relationships with people from your electorate. Together, we will make a plan to scale up people-power and launch a national network of local Action Groups. &nbsp;<br /><br />PowerUp is about organising the power to do <em>more</em> than educate voters at election time. <strong>We are building the power to shift polls, move the media, and change the battleground issues that&rsquo;ll decide the next election.</strong></p>
   </div>
 	  <a href="/ticket/" class="button home-hero-button editable hide-mobile" id="first-fade-position">Buy Ticket</a>
 </div>
@@ -66,7 +66,7 @@ id: home
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/scalescale.svg" class="narrative-icon" />
-		<p class="narrative editable">Scale &nbsp;<br />People-Power!</p>
+		<p class="narrative editable">Scale up<br />People-Power!</p>
 	</div>
 </div>
 
@@ -79,7 +79,7 @@ id: home
 				<div>
 				<img src="images/icons/program.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable">The Program</span></h2>
-				<p class="editable">PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique experience appropriate for all levels of experience.<strong><br>Stay tuned for the full program in June.</strong></p>
+				<p class="editable">PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It&rsquo;s a unique opportunity appropriate for all levels of experience.<strong><br>Stay tuned for the full program in June.</strong></p>
 				<a href="/program/" class="button editable outline">More info</a>
 				</div>
 			</span>
