--- a/faqs.html
+++ b/faqs.html
@@ -13,7 +13,7 @@ description: FAQ
         
         <div class="faq-container">
 
-        <a href="#" id="expand" class="expandall" style=""> Expand all </a>
+        <div><a href="#" id="expand" class="button outline expandall" style=""> <span>Expand all</span> </a></div>
             <!---------------------------------------------------------------->
             <!--TICKET-->
             <h3 class="faq-subheading"> PowerUp </h3>
