text changes to faq

--- a/faqs.html
+++ b/faqs.html
@@ -25,9 +25,9 @@ description: FAQ
             <div class="panel">
                 <p>
                     For too long, self-serving corporations and right-wing power brokers have captured our democracy, making inequality worse and ravaging our environment. We need to build a new form of power that breaks this hold.
-
+<br><br>
 Securing a safe world for future generations is going to come down to us — and we’re going to have to step up now. At PowerUp, you will converge with a thousand passionate GetUp members for a weekend of shared values, practical skills workshops and strategy sessions. Then together we’ll launch a new national network of Action Groups that can take back power for everyday people. 
-
+<br><br>
 If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. <a class="blue" href="/ticket/">Buy your ticket now.</a>
                 </p>
             </div>
@@ -54,9 +54,9 @@ If you want to get the skills, tools and connections to make a difference and yo
             <div class="panel">
                 <p>
                     Your PowerUp experience will focus on practical skills building, campaign strategy and community organising fundamentals.
-
+<br><br>
 During workshops, you’ll learn about taking on leadership roles in your community, how to build and sustain effective groups, and other critical organising skills. At all-in plenaries, you’ll learn about GetUp’s strategy to scale up people-power in Australia, and how you can play a key role in it. 
-
+<br><br>
 Perhaps most importantly, you’ll build meaningful connections with other attendees from your home electorate that could form the basis for a local Action Group.
                 </p>
             </div>
@@ -97,8 +97,8 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
             <div class="panel">
                 <p>
                    As a Sydney-based conference, we recognise that the cost of a ticket, accommodation and travel can be especially prohibitive for interstate folk. We also acknowledge that the rising cost of living has put a strain on many households.
-
-PowerUp has put aside a limited scholarship fund. If you're passionate about attending PowerUp but need some help, <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0YquhF6-YVtQoEQYt5XIyMjHkVWQNq4nRXQ9D6IEVKGPEtQ/viewform?c=0&w=1" class="blue">please fill out this confidential application form.</a>
+<br><br>
+PowerUp has put aside a limited scholarship fund. If you're passionate about attending PowerUp but need some help, <a href="http://www.surveygizmo.com/s3/3549361/PowerUp-Scholarship-Application" class="blue" target="_blank">please fill out this confidential application form.</a>
                 </p>
             </div>
 
@@ -112,7 +112,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                  If you haven’t purchased your ticket yet then <a class="blue" href="https://powerup.org.au/ticket/">you can opt for a philanthropy ticket,</a> which will give you one ticket to PowerUp plus provide a generous donation to the fund. Alternatively, <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="blue">you can click here to donate.</a> Every dollar will go towards another attendee’s ticket, travel, accommodation and food. Thank you for your generosity.
+                  If you haven’t purchased your ticket yet then <a class="blue" href="https://powerup.org.au/ticket/">you can opt for a philanthropy ticket,</a> which will give you one ticket to PowerUp plus provide a generous donation to the fund. Alternatively, <a href="https://www.getup.org.au/campaigns/powerup/powerup-donate/power-donate" class="blue faq-donate-button" target="_blank">you can click here to donate.</a> Every dollar will go towards another attendee’s ticket, travel, accommodation and food. Thank you for your generosity.
                 </p>
             </div>
 
@@ -127,7 +127,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <div class="panel">
                 <p>
 
-                  If you can’t find the answer you’re looking for on this page, email <a href="mailto:powerup@getup.org.au" class="blue">powerup@getup.org.au</a> for more information.
+                  If you can’t find the answer you’re looking for on this page, <a href="mailto:powerup@getup.org.au" class="blue">email powerup@getup.org.au</a> for more information.
 
                 </p>
             </div>
@@ -168,7 +168,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    PowerUp has capped the number of tickets available for each electorate to ensure there’s an even spread of attendees. This will allow PowerUp to organise ticket-holders into evenly-sized workshop groups based upon their federal electorate. If you want to buy a ticket but they’ve sold out in your electorate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeS_ke0eFqMP3UTtLRa12PSiW5X6SOuJWAX3yXRh7sk6m50Yg/viewform?c=0&w=1" class="blue">click here to go on the waiting list.</a>
+                    PowerUp has capped the number of tickets available for each electorate to ensure there’s an even spread of attendees. This will allow PowerUp to organise ticket-holders into evenly-sized workshop groups based upon their federal electorate. If you want to buy a ticket but they’ve sold out in your electorate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeS_ke0eFqMP3UTtLRa12PSiW5X6SOuJWAX3yXRh7sk6m50Yg/viewform?c=0&w=1" class="blue" target="_blank">click here to go on the waiting list.</a>
                 </p>
             </div>
 
@@ -180,7 +180,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p>
-                    If you want to buy a ticket but they’ve sold out in your electorate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeS_ke0eFqMP3UTtLRa12PSiW5X6SOuJWAX3yXRh7sk6m50Yg/viewform?c=0&w=1" class="blue">click here to go on the waiting list.</a> It’s expected that there will be a few cancellations in each electorate so don’t lose hope!
+                    If you want to buy a ticket but they’ve sold out in your electorate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeS_ke0eFqMP3UTtLRa12PSiW5X6SOuJWAX3yXRh7sk6m50Yg/viewform?c=0&w=1" class="blue" target="_blank">click here to go on the waiting list.</a> It’s expected that there will be a few cancellations in each electorate so don’t lose hope!
                 </p>
             </div>
 
@@ -280,7 +280,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    There are no train services to UNSW, but the venue is serviced by many bus routes. The easiest way to plan your trip is to use <a href="https://transportnsw.info/trip#/" class="blue">Transport NSW Trip Planner.</a>
+                    There are no train services to UNSW, but the venue is serviced by many bus routes. The easiest way to plan your trip is to use <a href="https://transportnsw.info/trip#/" class="blue" target="_blank">Transport NSW Trip Planner.</a>
                 </p>
             </div>
 
@@ -292,7 +292,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    There is complimentary and unlimited weekend parking on campus just a short walk from Clancy Auditorium. <a href="http://shops.20x20.net/WebRoot/Hosting/Shops/Healthed/MediaGallery/SGN09_0020_-_0020_Uni_0020_UNSW_0020_Map.pdf" class="blue">Click here to view a map.</a> You can also check out alternative campus parking <a href="http://fmtoolbox.unsw.edu.au/comms/KensingtonParking.pdf" class="blue">on this map here.</a>
+                    There is complimentary and unlimited weekend parking on campus just a short walk from Clancy Auditorium. <a href="http://shops.20x20.net/WebRoot/Hosting/Shops/Healthed/MediaGallery/SGN09_0020_-_0020_Uni_0020_UNSW_0020_Map.pdf" class="blue" target="_blank">Click here to view a map.</a> You can also check out alternative campus parking <a href="http://fmtoolbox.unsw.edu.au/comms/KensingtonParking.pdf" class="blue" target="_blank">on this map here.</a>
                 </p>
             </div>
             
@@ -305,7 +305,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    PowerUp is a fully accessible event. For a comprehensive accessibility map of the UNSW Kensington campus click <a href="http://fmtoolbox.unsw.edu.au/comms/KensingtonParking.pdf" class="blue">here.</a> If you would like to know more or would like to register the status of your mobility with us, please get in touch with <a href="mailto:powerup@getup.org.au" class="blue">powerup@getup.org.au</a> 
+                    PowerUp is a fully accessible event. For a comprehensive accessibility map of the UNSW Kensington campus click <a href="http://fmtoolbox.unsw.edu.au/comms/KensingtonParking.pdf" class="blue" target="_blank">here.</a> If you would like to know more or would like to register the status of your mobility with us, please get in touch with <a href="mailto:powerup@getup.org.au" class="blue">powerup@getup.org.au</a> 
                 </p>
             </div>
             <div class="faq-underline"></div>
@@ -334,7 +334,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                    If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only a 5 km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of options too. To get some more ideas, explore <a href="htpps://www.booking.com.au" class="blue"> booking.com.au </a> and <a href="https://www.airbnb.com.au" class="blue">airbnb.com.au</a>.
+                    If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only a 5 km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of options too. To get some more ideas, explore <a href="http://www.booking.com.au" class="blue" target="_blank"> booking.com.au </a> and <a href="http://www.airbnb.com.au" class="blue" target="_blank">airbnb.com.au</a>.
                 </p>
             </div>
 
@@ -348,9 +348,9 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <div class="panel ">
                 <p>
                    Do you have a spare room in Sydney you’d be happy to offer an interstate PowerUp attendee? Alternatively, are you travelling interstate and looking for a free room in Sydney to keep down costs?
-
+<br><br>
 PowerUp is building a simple site that will connect spare rooms in Sydney with attendees looking for one. 
-
+<br><br>
 If you’ve got a room to offer, all you’ll have to do is list the suburb, occupancy of the room and your contact details. Then all you have to do is wait for an introductory email from a fellow PowerUp attendee. It’s then up to you to offer them the room, and pass on more details. 
 
                 </p>
