--- a/faqs.html
+++ b/faqs.html
@@ -352,6 +352,8 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
 PowerUp is building a simple site that will connect spare rooms in Sydney with attendees looking for one. 
 <br><br>
 If you’ve got a room to offer, all you’ll have to do is list the suburb, occupancy of the room and your contact details. Then all you have to do is wait for an introductory email from a fellow PowerUp attendee. It’s then up to you to offer them the room, and pass on more details. 
+<a href="https://goo.gl/forms/ZYR9ECyU96yj459j2" class="blue" target="_blank"> 
+Register your interest here now to offer or take up a spare room and we’ll get back to you when the site is live. </a>
 
                 </p>
             </div>
