--- a/program.html
+++ b/program.html
@@ -9,7 +9,7 @@ description: PowerUp
 			<span class="black-container">
 				<div>
 				<img src="../images/icons/program-white.svg" class="x-icon" align="top">
-				<h2> <span class="dotted-underline"> Programs </span></h2>
+				<h2> <span class="dotted-underline"> Program </span></h2>
 				<p>
 				PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It’s a unique experience appropriate for all levels of experience.
 					<br><br>
