--- a/email.html
+++ b/email.html
@@ -1,14 +1,21 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+---
+---
 
-<head>
-  <title></title>
-  <!--[if !mso]><!-- -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!--<![endif]-->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style type="text/css">
+/*CUSTOM*/
+  table tbody tr:nth-child(even) {
+        background: white;
+    }
+
+    table,
+    td {
+      border-collapse: inherit;
+      mso-table-lspace: 0pt;
+      mso-table-rspace: 0pt;
+    }
+/*END CUSTOM*/
+
+
     #outlook a {
       padding: 0;
     }
@@ -31,13 +38,7 @@
       -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
     }
-
-    table,
-    td {
-      border-collapse: collapse;
-      mso-table-lspace: 0pt;
-      mso-table-rspace: 0pt;
-    }
+    
 
     img {
       border: 0;
