--- a/email.html
+++ b/email.html
@@ -228,7 +228,7 @@
                     </tr>
                     <tr>
                       <td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-bottom:5px;" align="center">
-                        <div class="" style="cursor:auto;color:#000000;font-family:helvetica;font-size:17px;line-height:24px;text-align:center;">There's a fair bit of travel involved in attending PowerUp. Depending on where you live in might mean a big drive or flight, two nights away from home and a decent cost. It's no small ask, and not one that GetUp makes lightly.</div>
+                        <div class="" style="cursor:auto;color:#000000;font-family:helvetica;font-size:17px;line-height:24px;text-align:center;">There's a fair bit of travel involved in attending PowerUp. Depending on where you live it might mean a big drive or flight, two nights away from home and a decent cost. It's no small ask, and not one that GetUp makes lightly.</div>
                       </td>
                     </tr>
                     <tr>
