speakers update and images

--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@ id: home
         <div>			
 				<img src="images/icons/Speakers.svg" class="x-icon" />
 				<h2> <span class="dotted-underline editable" id="fade-position">Speakers </span></h2>
-				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win.<strong><br>
-        Stay tuned for updates in June.</strong></p>
-				<a href="/speakers/" class="button editable outline">More info</a>
+				<p class="editable">Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win.</p>
+				<a href="/speakers/" class="button editable outline">View speakers</a>
         </div>
 			</span>
 		</div>
