becky bio update

--- a/speakers.html
+++ b/speakers.html
@@ -51,7 +51,7 @@ description: PowerUp
 			</h4>
 			<div class="dotted-underline"> </div>
 			<p class="speakers__blurb editable">
-				Becky Bond is the co-author of “Rules for Revolutionaries: How Big Organizing Can Change Everything.” She served as a senior adviser on the Bernie Sanders 2016  presidential campaign, and was an architect of the campaign’s national, volunteer-driven grassroots campaign. After the 2016 presidential cycle, Becky founded the Big Organizing Project and is a pioneer in the use of distributed organizing to win advocacy and electoral campaigns. Prior to joining the Bernie Sanders campaign, Becky served as political director at CREDO and president of CREDO SuperPAC where she was an innovator working at the intersection of organizing, politics and technology for over a decade.
+				Becky Bond is the co-author of “Rules for Revolutionaries: How Big Organizing Can Change Everything.” She served as a senior adviser on the Bernie Sanders 2016  presidential campaign, and was an architect of the campaign’s national, volunteer-driven grassroots campaign. After the 2016 presidential cycle, Becky founded the Big Organizing Project and is a pioneer in the use of distributed organizing to win advocacy and electoral campaigns.
 			</p>
 		</div>
 		
